Add styles for background and layout in index.html

--- a/index.html
+++ b/index.html
@@ -4,4 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Valentinstag Einladung</title>
+    <style>
+        body {
+            background: radial-gradient(circle, #ffafbd, #ffc3a0); /* Der rosa Verlauf aus deinem Bild */
+            height: 100vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin: 0;
+            font-family: sans-serif;
+        }
+    </style>
+</head>
+<body>
     <div>Guten Tag</div>
+</body>
+</html>
