--- a/index.html
+++ b/index.html
@@ -3,20 +3,146 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Valentinstag Einladung</title>
+    <title>Be My Valentine?</title>
     <style>
         body {
-            background: radial-gradient(circle, #ffafbd, #ffc3a0); /* Der rosa Verlauf aus deinem Bild */
+            background: radial-gradient(circle, #ffafbd, #ffc3a0);
             height: 100vh;
             display: flex;
             justify-content: center;
             align-items: center;
             margin: 0;
-            font-family: sans-serif;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            overflow: hidden;
+        }
+
+        #card {
+            text-align: center;
+            background: rgba(255, 255, 255, 0.2);
+            padding: 50px;
+            border-radius: 20px;
+            backdrop-filter: blur(10px);
+            box-shadow: 0 10px 30px rgba(0,0,0,0.1);
+            border: 1px solid rgba(255,255,255,0.3);
+            width: 350px;
+            min-height: 400px;
+            /* WICHTIG: Erlaubt dem Button, sich innerhalb der Karte zu bewegen */
+            position: relative; 
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .heart {
+            color: #e74c3c;
+            font-size: 70px;
+            margin-bottom: 10px;
+            animation: beat 1.2s infinite;
+        }
+
+        @keyframes beat {
+            0%, 100% { transform: scale(1); }
+            50% { transform: scale(1.1); }
+        }
+
+        h1 {
+            color: white;
+            text-shadow: 1px 1px 5px rgba(0,0,0,0.1);
+            font-size: 1.5rem;
+            margin-bottom: 40px;
+        }
+
+        .buttons {
+            width: 100%;
+            height: 100px; /* Platz für das Button-Springen */
+            position: relative;
+        }
+
+        button {
+            padding: 12px 25px;
+            font-size: 1rem;
+            border: none;
+            border-radius: 50px;
+            cursor: pointer;
+            font-weight: bold;
+            transition: transform 0.1s;
+        }
+
+        #yesBtn {
+            background-color: #2ecc71;
+            color: white;
+            box-shadow: 0 4px 15px rgba(46, 204, 113, 0.4);
+            position: absolute;
+            left: 20px; /* Feste Startposition */
+        }
+
+        #noBtn {
+            background-color: #e74c3c;
+            color: white;
+            position: absolute;
+            right: 20px; /* Feste Startposition */
+            transition: all 0.2s ease;
+            z-index: 10;
+        }
+
+        #successMessage {
+            display: none;
+            text-align: center;
+            color: white;
+        }
+
+        @keyframes fadeIn {
+            from { opacity: 0; }
+            to { opacity: 1; }
         }
     </style>
 </head>
 <body>
-    <div>Guten Tag</div>
+
+    <div id="card">
+        <div id="mainContent">
+            <div class="heart">❤️</div>
+            <h1>Will you be my valentine?</h1>
+            <div class="buttons">
+                <button id="yesBtn" onclick="showSuccess()">Yes</button>
+                <button id="noBtn" onmouseover="moveNoButton()" onclick="moveNoButton()">No</button>
+            </div>
+        </div>
+
+        <div id="successMessage">
+            <div style="font-size: 80px;">🥰</div>
+            <h1>Juhu! ❤️</h1>
+            <p>Ich hab's gewusst!</p>
+        </div>
+    </div>
+
+    <script>
+        const noBtn = document.getElementById('noBtn');
+        const card = document.getElementById('card');
+        const mainContent = document.getElementById('mainContent');
+        const successMessage = document.getElementById('successMessage');
+
+        function moveNoButton() {
+            const cardWidth = card.clientWidth;
+            const cardHeight = card.clientHeight;
+
+            const padding = 30;
+            const maxX = cardWidth - noBtn.offsetWidth - padding;
+            const maxY = cardHeight - noBtn.offsetHeight - padding;
+
+            const randomX = Math.floor(Math.random() * maxX);
+            const randomY = Math.floor(Math.random() * maxY);
+
+            noBtn.style.left = randomX + "px";
+            noBtn.style.top = randomY + "px";
+        }
+
+        function showSuccess() {
+            mainContent.style.display = 'none';
+            successMessage.style.display = 'block';
+            document.body.style.background = "radial-gradient(circle, #ff758c, #ff7eb3)";
+        }
+    </script>
 </body>
 </html>
